# transferLib

./: .gitignore  LICENSE  Readme.md  Readme.rst  SpotifyPlaylist.py  app.py  dev.properties  environment.yml  main.py  playlist.json  pyproject.toml  readClientProperties.py  requirements.txt  setup.py  util.py  utils.py
templates/: exitspotify.html  index.html  login.html
transferLib/: SpotifyPlaylist.py
transferLib/utils/: dev.properties  utils.py
transferLib/ytMusicApi/: ytMusicAPI.py
