[tool.poetry]
name = "trasnferlib"
version = "0.0.1"
description = "Trasnfer Spotify playlists to youtube music"
authors = ["Abhijeet Mishra <dsisavi@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.6"
requests = "^2.27.1"
Flask = "^2.2.5"
jsonpickle = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
